# Lyrics-viewer

./: .gitignore  CMakeLists.txt  ERRORS.md  LICENSE.txt  Lyrics-viewer.sln  Makefile  README.md  TO_DO.md  main.py  requirements.txt
Lyrics-viewer/: Lyrics-viewer.vcxproj  Lyrics-viewer.vcxproj.filters  authclient.cpp  authclient.hpp  binding.hpp  button.hpp  cefapp.cpp  cefapp.h  cefapp.hpp  cefclient.cpp  cefclient.hpp  cefhandler.cpp  cefhandler.h  cefhandler.hpp  curlwrapper.cpp  curlwrapper.h  curlwrapper.hpp  main.cpp  overlay.cpp  overlay.h  overlay.hpp  roundedrect.cpp  roundedrect.h  roundedrect.hpp  winlessclient.cpp  winlessclient.hpp
Player-website/: index.html  index.js
Recorder/: Recorder.vcxproj  Recorder.vcxproj.filters  main.cpp  recorder.cpp  recorder.h
Redirect-website/: fail.html  index.html  redirect.html  redirect.js
docs/: external.html  fail.html  index.html  player.html  player.js  redirect.css  redirect.html  redirect.js  style.css  success.html
src/: app.rc  authclient.cpp  authclient.hpp  binding.hpp  button.hpp  cefapp.hpp  curlwrapper.cpp  curlwrapper.hpp  main.cpp  overlay.cpp  overlay.hpp
